tests/src/frontend/typechecking/invalid/assign_dot4.sk
fun main(): void {
  ref = mutable Ref(42);
  ref.!value = "hello";
  print_raw(ref.value)
}
